// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/MarketDetails fetches market details and displays them correctly 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-3hou68-MuiPaper-root-MarketDetailsUi"
  data-testid="market-details-supply-info"
>
  <div
    class="css-18cd57f-Card"
  >
    <h4
      class="css-cg8dz9-Card"
    >
      Supply info
    </h4>
    <div
      class="css-1epwdn4-Card"
    >
      <div
        class="css-1enkvhy-Card"
      >
        <div
          class="css-1x27g2a-Card"
        />
        <span
          class="MuiTypography-root MuiTypography-small2 css-fq6xku-MuiTypography-root-Card"
        >
          Supply APY
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1epwdn4-Card"
  >
    <div
      class="css-111u98g-Card"
    >
      <div
        class="MuiTypography-root MuiTypography-small2 css-1nllli2-MuiTypography-root-Card"
      >
        Total supply
      </div>
      <h4
        class="MuiTypography-root MuiTypography-h4 css-13ud2lo-MuiTypography-root-Card"
      >
        $2K
      </h4>
    </div>
    <div
      class="css-111u98g-Card"
    >
      <div
        class="MuiTypography-root MuiTypography-small2 css-1nllli2-MuiTypography-root-Card"
      >
        APY
      </div>
      <h4
        class="MuiTypography-root MuiTypography-h4 css-13ud2lo-MuiTypography-root-Card"
      >
        0%
      </h4>
    </div>
    <div
      class="css-111u98g-Card"
    >
      <div
        class="MuiTypography-root MuiTypography-small2 css-1nllli2-MuiTypography-root-Card"
      >
        Distribution APY
      </div>
      <h4
        class="MuiTypography-root MuiTypography-h4 css-13ud2lo-MuiTypography-root-Card"
      >
        Infinity%
      </h4>
    </div>
  </div>
  <div
    class="css-1hg3c9x-MarketDetailsUi"
  >
    <div
      class="css-1vsb9hi-ApyChart"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 100%;"
      />
    </div>
  </div>
</div>
`;

exports[`pages/MarketDetails fetches market details and displays them correctly 2`] = `
<div
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-3hou68-MuiPaper-root-MarketDetailsUi"
  data-testid="market-details-borrow-info"
>
  <div
    class="css-18cd57f-Card"
  >
    <h4
      class="css-cg8dz9-Card"
    >
      Borrow info
    </h4>
    <div
      class="css-1epwdn4-Card"
    >
      <div
        class="css-1enkvhy-Card"
      >
        <div
          class="css-1dir0do-Card"
        />
        <span
          class="MuiTypography-root MuiTypography-small2 css-fq6xku-MuiTypography-root-Card"
        >
          Borrow APY
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1epwdn4-Card"
  >
    <div
      class="css-111u98g-Card"
    >
      <div
        class="MuiTypography-root MuiTypography-small2 css-1nllli2-MuiTypography-root-Card"
      >
        Total borrow
      </div>
      <h4
        class="MuiTypography-root MuiTypography-h4 css-13ud2lo-MuiTypography-root-Card"
      >
        $4K
      </h4>
    </div>
    <div
      class="css-111u98g-Card"
    >
      <div
        class="MuiTypography-root MuiTypography-small2 css-1nllli2-MuiTypography-root-Card"
      >
        APY
      </div>
      <h4
        class="MuiTypography-root MuiTypography-h4 css-13ud2lo-MuiTypography-root-Card"
      >
        -0.16%
      </h4>
    </div>
    <div
      class="css-111u98g-Card"
    >
      <div
        class="MuiTypography-root MuiTypography-small2 css-1nllli2-MuiTypography-root-Card"
      >
        Distribution APY
      </div>
      <h4
        class="MuiTypography-root MuiTypography-h4 css-13ud2lo-MuiTypography-root-Card"
      >
        1.23%
      </h4>
    </div>
  </div>
  <div
    class="css-1hg3c9x-MarketDetailsUi"
  >
    <div
      class="css-1vsb9hi-ApyChart"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 100%;"
      />
    </div>
  </div>
</div>
`;

exports[`pages/MarketDetails fetches market details and displays them correctly 3`] = `
<div
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-3hou68-MuiPaper-root-MarketDetailsUi"
  data-testid="market-details-interest-rate-model"
>
  <div
    class="css-18cd57f-Card"
  >
    <h4
      class="css-cg8dz9-Card"
    >
      Interest Rate Model
    </h4>
    <div
      class="css-1epwdn4-Card"
    >
      <div
        class="css-1enkvhy-Card"
      >
        <div
          class="css-11ymba3-Card"
        />
        <span
          class="MuiTypography-root MuiTypography-small2 css-fq6xku-MuiTypography-root-Card"
        >
          Utilization rate
        </span>
      </div>
      <div
        class="css-1enkvhy-Card"
      >
        <div
          class="css-1dir0do-Card"
        />
        <span
          class="MuiTypography-root MuiTypography-small2 css-fq6xku-MuiTypography-root-Card"
        >
          Borrow APY
        </span>
      </div>
      <div
        class="css-1enkvhy-Card"
      >
        <div
          class="css-1x27g2a-Card"
        />
        <span
          class="MuiTypography-root MuiTypography-small2 css-fq6xku-MuiTypography-root-Card"
        >
          Supply APY
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1hg3c9x-MarketDetailsUi"
  >
    <div
      class="css-j98pzs-InterestRateChart"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 100%;"
      />
    </div>
  </div>
</div>
`;

exports[`pages/MarketDetails fetches market details and displays them correctly 4`] = `
<div
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-55orx4-MuiPaper-root"
  data-testid="market-details-market-info"
>
  <div
    class="css-18cd57f-Card"
  >
    <h4
      class="css-cg8dz9-Card"
    >
      Market info
    </h4>
  </div>
  <ul
    class="css-1i48wml-MarketInfo"
  >
    <li
      class="css-kuh9ym-MarketInfo"
    >
      <div
        class="css-11m73d3-LabeledInlineContent"
      >
        <div
          class="css-belwdj-LabeledInlineContent"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-ca6fq9-MuiTypography-root-LabeledInlineContent"
          >
            Price
          </span>
        </div>
        <div
          class="MuiTypography-root MuiTypography-body1 css-nglhx1-MuiTypography-root-LabeledInlineContent"
        >
          <span
            class="css-z29iu1-MarketInfo"
          >
            $40
          </span>
        </div>
      </div>
    </li>
    <li
      class="css-kuh9ym-MarketInfo"
    >
      <div
        class="css-11m73d3-LabeledInlineContent"
      >
        <div
          class="css-belwdj-LabeledInlineContent"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-ca6fq9-MuiTypography-root-LabeledInlineContent"
          >
            Market liquidity
          </span>
        </div>
        <div
          class="MuiTypography-root MuiTypography-body1 css-nglhx1-MuiTypography-root-LabeledInlineContent"
        >
          <span
            class="css-z29iu1-MarketInfo"
          >
            6,000 AAVE
          </span>
        </div>
      </div>
    </li>
    <li
      class="css-kuh9ym-MarketInfo"
    >
      <div
        class="css-11m73d3-LabeledInlineContent"
      >
        <div
          class="css-belwdj-LabeledInlineContent"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-ca6fq9-MuiTypography-root-LabeledInlineContent"
          >
            # of suppliers
          </span>
        </div>
        <div
          class="MuiTypography-root MuiTypography-body1 css-nglhx1-MuiTypography-root-LabeledInlineContent"
        >
          <span
            class="css-z29iu1-MarketInfo"
          >
            144
          </span>
        </div>
      </div>
    </li>
    <li
      class="css-kuh9ym-MarketInfo"
    >
      <div
        class="css-11m73d3-LabeledInlineContent"
      >
        <div
          class="css-belwdj-LabeledInlineContent"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-ca6fq9-MuiTypography-root-LabeledInlineContent"
          >
            # of borrowers
          </span>
        </div>
        <div
          class="MuiTypography-root MuiTypography-body1 css-nglhx1-MuiTypography-root-LabeledInlineContent"
        >
          <span
            class="css-z29iu1-MarketInfo"
          >
            6
          </span>
        </div>
      </div>
    </li>
    <li
      class="css-kuh9ym-MarketInfo"
    >
      <div
        class="css-11m73d3-LabeledInlineContent"
      >
        <div
          class="css-belwdj-LabeledInlineContent"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-ca6fq9-MuiTypography-root-LabeledInlineContent"
          >
            Borrow cap
          </span>
        </div>
        <div
          class="MuiTypography-root MuiTypography-body1 css-nglhx1-MuiTypography-root-LabeledInlineContent"
        >
          <span
            class="css-z29iu1-MarketInfo"
          >
            $400,000.00
          </span>
        </div>
      </div>
    </li>
    <li
      class="css-kuh9ym-MarketInfo"
    >
      <div
        class="css-11m73d3-LabeledInlineContent"
      >
        <div
          class="css-belwdj-LabeledInlineContent"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-ca6fq9-MuiTypography-root-LabeledInlineContent"
          >
            Interest paid/day
          </span>
        </div>
        <div
          class="MuiTypography-root MuiTypography-body1 css-nglhx1-MuiTypography-root-LabeledInlineContent"
        >
          <span
            class="css-z29iu1-MarketInfo"
          >
            $1,000.00
          </span>
        </div>
      </div>
    </li>
    <li
      class="css-kuh9ym-MarketInfo"
    >
      <div
        class="css-11m73d3-LabeledInlineContent"
      >
        <div
          class="css-belwdj-LabeledInlineContent"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-ca6fq9-MuiTypography-root-LabeledInlineContent"
          >
            Reserves
          </span>
        </div>
        <div
          class="MuiTypography-root MuiTypography-body1 css-nglhx1-MuiTypography-root-LabeledInlineContent"
        >
          <span
            class="css-z29iu1-MarketInfo"
          >
            0 AAVE
          </span>
        </div>
      </div>
    </li>
    <li
      class="css-kuh9ym-MarketInfo"
    >
      <div
        class="css-11m73d3-LabeledInlineContent"
      >
        <div
          class="css-belwdj-LabeledInlineContent"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-ca6fq9-MuiTypography-root-LabeledInlineContent"
          >
            Reserve factor
          </span>
        </div>
        <div
          class="MuiTypography-root MuiTypography-body1 css-nglhx1-MuiTypography-root-LabeledInlineContent"
        >
          <span
            class="css-z29iu1-MarketInfo"
          >
            0%
          </span>
        </div>
      </div>
    </li>
    <li
      class="css-kuh9ym-MarketInfo"
    >
      <div
        class="css-11m73d3-LabeledInlineContent"
      >
        <div
          class="css-belwdj-LabeledInlineContent"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-ca6fq9-MuiTypography-root-LabeledInlineContent"
          >
            Collateral factor
          </span>
        </div>
        <div
          class="MuiTypography-root MuiTypography-body1 css-nglhx1-MuiTypography-root-LabeledInlineContent"
        >
          <span
            class="css-z29iu1-MarketInfo"
          >
            55%
          </span>
        </div>
      </div>
    </li>
    <li
      class="css-kuh9ym-MarketInfo"
    >
      <div
        class="css-11m73d3-LabeledInlineContent"
      >
        <div
          class="css-belwdj-LabeledInlineContent"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-ca6fq9-MuiTypography-root-LabeledInlineContent"
          >
            vAAVE minted
          </span>
        </div>
        <div
          class="MuiTypography-root MuiTypography-body1 css-nglhx1-MuiTypography-root-LabeledInlineContent"
        >
          <span
            class="css-z29iu1-MarketInfo"
          >
            52,965,104,736,226.06 AAVE
          </span>
        </div>
      </div>
    </li>
    <li
      class="css-kuh9ym-MarketInfo"
    >
      <div
        class="css-11m73d3-LabeledInlineContent"
      >
        <div
          class="css-belwdj-LabeledInlineContent"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-ca6fq9-MuiTypography-root-LabeledInlineContent"
          >
            Exchange rate
          </span>
        </div>
        <div
          class="MuiTypography-root MuiTypography-body1 css-nglhx1-MuiTypography-root-LabeledInlineContent"
        >
          <span
            class="css-z29iu1-MarketInfo"
          >
            1 AAVE=4997144211.537699 vAAVE
          </span>
        </div>
      </div>
    </li>
  </ul>
</div>
`;
